2009-10-10  Michal Ludvig  <mludvig@logix.net.nz>

	Support for Arduino auto-reset:
	* serial.h, ser_avrdoper.c, ser_posix.c, ser_win32.c: Added 
	  serial_device.set_dtr_rts implementations.
	* arduino.c, stk500.c, stk500.h: Call serial_set_dtr_rts()
	  to reset Arduino board before program upload.
	Inspired by patch #6866, resolves bug #26703

2009-10-08  Michal Ludvig  <mludvig@logix.net.nz>

	* buspirate.c: Optimised buspirate_cmd() - reading 1kB EEPROM now
	  takes only 14 sec instead of almost 2 mins with the original
	  implementation.

2009-10-08  Michal Ludvig  <mludvig@logix.net.nz>

	* buspirate.c, buspirate.h: Support for the BusPirate programmer
	* config_gram.y, avrdude.conf.in, main.c, lexer.l, Makefile.am:
	  Glue for BusPirate.

2009-08-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usb_libusb.c (usbdev_close): Repair the logic around the
	conditional compilation of usb_reset() introduced in r798.

2009-07-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: We are post-5.8 now.

2009-07-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Prepare for releasing version 5.8

2009-07-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Roger Wolff:
	bug #26527: bug in unicode conversion
	* ser_avrdoper.c (convertUniToAscii): when encountering a UTF-16
	character that cannot be converted to ASCII, increment the UTF-16
	pointer anyway when proceeding.

2009-07-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkI.c (jtagmkI_send): Replace %zd format by %u since not all
	implementations do understand the C99 formatting options (sigh).
	* jtagmkII.c (jtagmkII_send): (Ditto.)
	* stk500v2.c (stk500v2_recv): (Ditto.)

2009-07-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #26002: HVPP of EEPROM with AVR Dragon and ATmega8 Fails
	* avrdude.conf.in (ATmega8): add page size for EEPROM.

2009-07-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2.c: Fix a serious memory corruption problem resulting